Final Commit V2 git

--- a/EIMarketplace/Views/Shared/_BootstrapLayout.cshtml
+++ b/EIMarketplace/Views/Shared/_BootstrapLayout.cshtml
@@ -43,7 +43,7 @@
         <footer>
             <div class="content-wrapper">
                 <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year</p>
+                    <p>&copy; @DateTime.Now.Year Rishab Hegde</p>
                 </div>
             </div>
         </footer>
