Final Commit v5, Azure

--- a/EIMarketplace/Views/Shared/_BootstrapLayout.cshtml
+++ b/EIMarketplace/Views/Shared/_BootstrapLayout.cshtml
@@ -21,7 +21,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-            @Html.ActionLink("EI Marketplace", "Search", "Listing", new{},  new { @class = "navbar-brand" })
+            @Html.ActionLink("EI Marketplace", "Index", "Home", new{},  new { @class = "navbar-brand" })
         </div>
 
         <div class="navbar-collapse collapse">
