--- a/EIMarketplace/Views/Account/Login.cshtml
+++ b/EIMarketplace/Views/Account/Login.cshtml
@@ -28,8 +28,8 @@
                 @Html.ValidationMessageFor(m => m.Password)
         </p>
                 <p>
+                    Remember Me?
                 @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe)
                     </p>
 
         <button type="submit" class="btn btn-success" value="Log in">Log In</button>
